k8s/01-funds-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: funds-ui
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: funds-ui
  template:
    metadata:
      labels:
        app: funds-ui
    spec:
      containers:
        - name: funds-ui
          image: uhub.service.ucloud.cn/entropypool/funds-ui:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: funds-ui
  namespace: kube-system
spec:
  ports:
    - name: api
      port: 80
      targetPort: 80
  selector:
    app: funds-ui
