k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: funds-webui-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: funds-webui
    k8s.kuboard.cn/workload: funds-webui
    kubernetes.io/ingress.class: "devops-vpn-nginx-internal"
    nginx.com/sticky-cookie-services: "serviceName=kuboard srv_id expires=1h path=/"

spec:
  rules:
    - host: funds.npool.top
      http:
        paths:
          - path: /
            backend:
              serviceName: funds-webui
              servicePort: 80
    - host: funds.xpool.top
      http: *http_rules
    - host: www.funds.npool.top
      http: *http_rules
    - host: www.funds.xpool.top
      http: *http_rules
